svalgo-infra/modules/network/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = merge(
    { Name = "vpc-${var.vpc_name}-${var.unique_string}" },
    var.tags
  )
}
